fixed image loading by changing vendor.image to vendor.image_url. Also changed scope of login.css list center align to only affect login page

--- a/css/login.css
+++ b/css/login.css
@@ -28,7 +28,7 @@ body{
     font-size: 11px;
 }
 
-.list{
+.login.list{
     padding: 50px,30px!important;
     width: 100%;
     text-align: center;
